[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["TuomoM <tuomo.mehtala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pytest = "^6.2.5"
toml-python = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
